--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </li>
           <li class="features-item item">
             <h3 class="features-item-title item-title">Punctuality</h3>
-            <p class="features-text">
+            <p class="features-text text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
