--- a/portfolio.html
+++ b/portfolio.html
@@ -5,166 +5,204 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <!--Header-->
+    <header class="header">
+      <nav class="header-navigation">
+        <a href="./index.html" class="header-logo logo link"
+          ><span class="color-logo">Web</span>studio</a
+        >
+        <ul class="header-list list">
+          <li>
+            <a href="./index.html" class="header-link link">Studio</a>
+          </li>
+          <li>
+            <a
+              href="./portfolio.html"
+              class="header-link.current header-link link"
+              >Portfolio</a
+            >
+          </li>
+          <li><a href="" class="header-link link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-address">
+        <ul class="header-address-list list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-email link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="header-phone link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
+      <!--Portfolio-->
       <section>
-        <h1>Portfolio</h1>
+        <h1 class="Portfolio section">Portfolio</h1>
         <ul class="filter">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
-        </ul>
-        <ul>
+          <li><button type="button" class="filter-btn button">All</button></li>
           <li>
+            <button type="button" class="filter-btn button">Web Site</button>
+          </li>
+          <li><button type="button" class="filter-btn button">App</button></li>
+          <li>
+            <button type="button" class="filter-btn button">Design</button>
+          </li>
+          <li>
+            <button type="button" class="filter-btn button">Marketing</button>
+          </li>
+        </ul>
+        <ul class="portfolio-list list">
+          <li class="portfolio-item item">
             <img
               src="./images/portfolio/banking-app.jpg"
               alt="Banking App Interface Concept"
               width="360"
               height="300"
             />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
-            <p>
+            <h2 class="portfolio-item-title item-title">
+              Banking App Interface Concept
+            </h2>
+            <p class="portfolio-text text">App</p>
+            <p class="portfolio-card-text text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager
               App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
               Storage App
             </p>
           </li>
-          <li>
+          <li class="portfolio-item item">
             <img
               src="./images/portfolio/cashless-payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
-            <p>
+            <h2 class="portfolio-item-title item-title">Cashless Payment</h2>
+            <p class="portfolio-text text">Marketing</p>
+            <p class="portfolio-card-text text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager
               App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
               Storage App
             </p>
           </li>
-          <li>
+          <li class="portfolio-item item">
             <img
               src="./images/portfolio/meditation-app.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
-            <h2>Meditation App</h2>
-            <p>App</p>
-            <p>
+            <h2 class="portfolio-item-title item-title">Meditation App</h2>
+            <p class="portfolio-text text">App</p>
+            <p class="portfolio-card-text text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager
               App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
               Storage App
             </p>
           </li>
-          <li>
+          <li class="portfolio-item item">
             <img
               src="./images/portfolio/taxi-service.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
-            <p>
+            <h2 class="portfolio-item-title item-title">Taxi Service</h2>
+            <p class="portfolio-text text">Marketing</p>
+            <p class="portfolio-card-text text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager
               App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
               Storage App
             </p>
           </li>
-          <li>
+          <li class="portfolio-item item">
             <img
               src="./images/portfolio/screen-illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
-            <p>
+            <h2 class="portfolio-item-title item-title">
+              Screen Illustrations
+            </h2>
+            <p class="portfolio-text text">Design</p>
+            <p class="portfolio-card-text text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager
               App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
               Storage App
             </p>
           </li>
-          <li>
+          <li class="portfolio-item item">
             <img
               src="./images/portfolio/online-courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
-            <p>
+            <h2 class="portfolio-item-title item-title">Online Courses</h2>
+            <p class="portfolio-text text">Marketing</p>
+            <p class="portfolio-card-text text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager
               App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
               Storage App
             </p>
           </li>
-          <li>
+          <li class="portfolio-item item">
             <img
               src="./images/portfolio/instagram-stories.jpg"
               alt="Instagram Stories Concept"
               width="360"
               height="300"
             />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
-            <p>
+            <h2 class="portfolio-item-title item-title">
+              Instagram Stories Concept
+            </h2>
+            <p class="portfolio-text text">Design</p>
+            <p class="portfolio-card-text text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager
               App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
               Storage App
             </p>
           </li>
-          <li>
+          <li class="portfolio-item item">
             <img
               src="./images/portfolio/organic-food.jpg"
               alt="Organic Food"
               width="360"
               height="300"
             />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
-            <p>
+            <h2 class="portfolio-item-title item-title">Organic Food</h2>
+            <p class="portfolio-text text">Web Site</p>
+            <p class="portfolio-card-text text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager
               App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
               Storage App
             </p>
           </li>
-          <li>
+          <li class="portfolio-item item">
             <img
               src="./images/portfolio/fresh-coffee.jpg"
               alt="Fresh Coffee"
               width="360"
               height="300"
             />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
-            <p>
+            <h2 class="portfolio-item-title item-title">Fresh Coffee</h2>
+            <p class="portfolio-text text">Web Site</p>
+            <p class="portfolio-card-text text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager
               App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
               Storage App
@@ -173,9 +211,12 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <!--Footer-->
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo logo link"
+        ><span class="color-logo">Web</span>studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
