--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
     <main>
       <!--Portfolio-->
       <section>
-        <h1 class="Portfolio section">Portfolio</h1>
+        <h1 class="Portfolio section" hidden="true">Portfolio</h1>
         <ul class="filter">
           <li><button type="button" class="filter-btn button">All</button></li>
           <li>
@@ -211,10 +211,10 @@
         </ul>
       </section>
     </main>
-    <!--Footer-->
+    <!-- Footer -->
     <footer class="footer">
       <a href="./index.html" class="footer-logo logo link"
-        ><span class="color-logo">Web</span>studio</a
+        >Web<span class="color-logo-footer">studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
