--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header class="header">
       <nav class="header-navigation">
         <a href="./index.html" class="header-logo logo link"
-          ><span class="color-logo">Web</span>studio</a
+          ><span class="color-logo">Web</span>Studio</a
         >
         <ul class="header-list list">
           <li>
@@ -52,7 +52,7 @@
     <main>
       <!--Portfolio-->
       <section>
-        <h1 class="Portfolio section" hidden="true">Portfolio</h1>
+        <h1 class="Portfolio section" hidden>Portfolio</h1>
         <ul class="filter">
           <li><button type="button" class="filter-btn button">All</button></li>
           <li>
@@ -214,7 +214,7 @@
     <!-- Footer -->
     <footer class="footer">
       <a href="./index.html" class="footer-logo logo link"
-        >Web<span class="color-logo-footer">studio</span></a
+        >Web<span class="color-logo-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
