--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <header class="header">
       <nav class="header-navigation">
         <a href="./index.html" class="header-logo logo link"
-          >Web<span class="color-logo">studio</span></a
+          >Web<span class="color-logo">Studio</span></a
         >
         <ul class="header-list list">
           <li>
-            <a href="./index.html" class="header-link.current header-link link"
+            <a href="./index.html" class="header-link-current header-link link"
               >Studio</a
             >
           </li>
@@ -55,7 +55,7 @@
       </section>
       <!-- Features -->
       <section class="features section">
-        <h2 class="features-title section-title" hidden="true">Features</h2>
+        <h2 class="features-title section-title" hidden>Features</h2>
         <ul class="features-list list">
           <li class="features-item item">
             <h3 class="features-item-title item-title">Strategy</h3>
@@ -167,7 +167,7 @@
     <!-- Footer -->
     <footer class="footer">
       <a href="./index.html" class="footer-logo logo link"
-        >Web<span class="color-logo-footer">studio</span></a
+        >Web<span class="color-logo-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
