--- a/portfolio.html
+++ b/portfolio.html
@@ -53,17 +53,25 @@
       <!--Portfolio-->
       <section>
         <h1 class="Portfolio section" hidden>Portfolio</h1>
-        <ul class="filter">
-          <li><button type="button" class="filter-btn button">All</button></li>
+        <ul class="filter-list list">
           <li>
-            <button type="button" class="filter-btn button">Web Site</button>
-          </li>
-          <li><button type="button" class="filter-btn button">App</button></li>
-          <li>
-            <button type="button" class="filter-btn button">Design</button>
+            <button type="button" class="filter-list-btn button">All</button>
           </li>
           <li>
-            <button type="button" class="filter-btn button">Marketing</button>
+            <button type="button" class="filter-list-btn button">
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button type="button" class="filter-list-btn button">App</button>
+          </li>
+          <li>
+            <button type="button" class="filter-list-btn button">Design</button>
+          </li>
+          <li>
+            <button type="button" class="filter-list-btn button">
+              Marketing
+            </button>
           </li>
         </ul>
         <ul class="portfolio-list list">
