--- a/portfolio.html
+++ b/portfolio.html
@@ -76,145 +76,163 @@
         </ul>
         <ul class="portfolio-list list">
           <li class="portfolio-item item">
-            <img
-              src="./images/portfolio/banking-app.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-item-title item-title">
-              Banking App Interface Concept
-            </h2>
-            <p class="portfolio-text text">App</p>
-            <p class="portfolio-card-text text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
+            <a href="" class="portfolio-link link">
+              <img
+                src="./images/portfolio/banking-app.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-item-title item-title">
+                Banking App Interface Concept
+              </h2>
+              <p class="portfolio-text text">App</p>
+              <p class="portfolio-card-text text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
           </li>
           <li class="portfolio-item item">
-            <img
-              src="./images/portfolio/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-item-title item-title">Cashless Payment</h2>
-            <p class="portfolio-text text">Marketing</p>
-            <p class="portfolio-card-text text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
+            <a href="" class="portfolio-link link">
+              <img
+                src="./images/portfolio/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-item-title item-title">Cashless Payment</h2>
+              <p class="portfolio-text text">Marketing</p>
+              <p class="portfolio-card-text text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
           </li>
           <li class="portfolio-item item">
-            <img
-              src="./images/portfolio/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-item-title item-title">Meditation App</h2>
-            <p class="portfolio-text text">App</p>
-            <p class="portfolio-card-text text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
+            <a href="" class="portfolio-link link">
+              <img
+                src="./images/portfolio/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-item-title item-title">Meditation App</h2>
+              <p class="portfolio-text text">App</p>
+              <p class="portfolio-card-text text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
           </li>
           <li class="portfolio-item item">
-            <img
-              src="./images/portfolio/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-item-title item-title">Taxi Service</h2>
-            <p class="portfolio-text text">Marketing</p>
-            <p class="portfolio-card-text text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
+            <a href="" class="portfolio-link link">
+              <img
+                src="./images/portfolio/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-item-title item-title">Taxi Service</h2>
+              <p class="portfolio-text text">Marketing</p>
+              <p class="portfolio-card-text text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
           </li>
           <li class="portfolio-item item">
-            <img
-              src="./images/portfolio/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-item-title item-title">
-              Screen Illustrations
-            </h2>
-            <p class="portfolio-text text">Design</p>
-            <p class="portfolio-card-text text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
+            <a href="" class="portfolio-link link">
+              <img
+                src="./images/portfolio/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-item-title item-title">
+                Screen Illustrations
+              </h2>
+              <p class="portfolio-text text">Design</p>
+              <p class="portfolio-card-text text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
           </li>
           <li class="portfolio-item item">
-            <img
-              src="./images/portfolio/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-item-title item-title">Online Courses</h2>
-            <p class="portfolio-text text">Marketing</p>
-            <p class="portfolio-card-text text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
+            <a href="" class="portfolio-link link">
+              <img
+                src="./images/portfolio/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-item-title item-title">Online Courses</h2>
+              <p class="portfolio-text text">Marketing</p>
+              <p class="portfolio-card-text text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
           </li>
           <li class="portfolio-item item">
-            <img
-              src="./images/portfolio/instagram-stories.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-item-title item-title">
-              Instagram Stories Concept
-            </h2>
-            <p class="portfolio-text text">Design</p>
-            <p class="portfolio-card-text text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
+            <a href="" class="portfolio-link link">
+              <img
+                src="./images/portfolio/instagram-stories.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-item-title item-title">
+                Instagram Stories Concept
+              </h2>
+              <p class="portfolio-text text">Design</p>
+              <p class="portfolio-card-text text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
           </li>
           <li class="portfolio-item item">
-            <img
-              src="./images/portfolio/organic-food.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-item-title item-title">Organic Food</h2>
-            <p class="portfolio-text text">Web Site</p>
-            <p class="portfolio-card-text text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
+            <a href="" class="portfolio-link link">
+              <img
+                src="./images/portfolio/organic-food.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-item-title item-title">Organic Food</h2>
+              <p class="portfolio-text text">Web Site</p>
+              <p class="portfolio-card-text text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
           </li>
           <li class="portfolio-item item">
-            <img
-              src="./images/portfolio/fresh-coffee.jpg"
-              alt="Fresh Coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-item-title item-title">Fresh Coffee</h2>
-            <p class="portfolio-text text">Web Site</p>
-            <p class="portfolio-card-text text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
+            <a href="" class="portfolio-link link">
+              <img
+                src="./images/portfolio/fresh-coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-item-title item-title">Fresh Coffee</h2>
+              <p class="portfolio-text text">Web Site</p>
+              <p class="portfolio-card-text text">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
           </li>
         </ul>
       </section>
