--- a/index.html
+++ b/index.html
@@ -35,16 +35,12 @@
       <address class="header-address">
         <ul class="header-address-list list">
           <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="header-address-link header-email link"
+            <a href="mailto:info@devstudio.com" class="header-address-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a
-              href="tel:+110001111111"
-              class="header-address-link header-phone link"
+            <a href="tel:+110001111111" class="header-address-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
