--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         >
         <ul class="header-list list">
           <li>
-            <a href="./index.html" class="header-link-current header-link link"
-              >Studio</a
-            >
+            <a href="./index.html" class="header-link link">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="header-link link">Portfolio</a>
