--- a/portfolio.html
+++ b/portfolio.html
@@ -18,18 +18,14 @@
     <header class="header">
       <nav class="header-navigation">
         <a href="./index.html" class="header-logo logo link"
-          ><span class="color-logo">Web</span>Studio</a
+          >Web<span class="color-logo">Studio</span></a
         >
         <ul class="header-list list">
           <li>
             <a href="./index.html" class="header-link link">Studio</a>
           </li>
           <li>
-            <a
-              href="./portfolio.html"
-              class="header-link.current header-link link"
-              >Portfolio</a
-            >
+            <a href="./portfolio.html" class="header-link link">Portfolio</a>
           </li>
           <li><a href="" class="header-link link">Contacts</a></li>
         </ul>
