--- a/portfolio.html
+++ b/portfolio.html
@@ -83,11 +83,11 @@
                 Banking App Interface Concept
               </h2>
               <p class="portfolio-text text">App</p>
-              <p class="portfolio-card-text text">
+              <!-- <p class="portfolio-card-text text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
-              </p>
+              </p> -->
             </a>
           </li>
           <li class="portfolio-item item">
@@ -100,11 +100,11 @@
               />
               <h2 class="portfolio-item-title item-title">Cashless Payment</h2>
               <p class="portfolio-text text">Marketing</p>
-              <p class="portfolio-card-text text">
+              <!-- <p class="portfolio-card-text text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
-              </p>
+              </p> -->
             </a>
           </li>
           <li class="portfolio-item item">
@@ -117,11 +117,11 @@
               />
               <h2 class="portfolio-item-title item-title">Meditation App</h2>
               <p class="portfolio-text text">App</p>
-              <p class="portfolio-card-text text">
+              <!-- <p class="portfolio-card-text text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
-              </p>
+              </p> -->
             </a>
           </li>
           <li class="portfolio-item item">
@@ -134,11 +134,11 @@
               />
               <h2 class="portfolio-item-title item-title">Taxi Service</h2>
               <p class="portfolio-text text">Marketing</p>
-              <p class="portfolio-card-text text">
+              <!-- <p class="portfolio-card-text text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
-              </p>
+              </p> -->
             </a>
           </li>
           <li class="portfolio-item item">
@@ -153,11 +153,11 @@
                 Screen Illustrations
               </h2>
               <p class="portfolio-text text">Design</p>
-              <p class="portfolio-card-text text">
+              <!-- <p class="portfolio-card-text text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
-              </p>
+              </p> -->
             </a>
           </li>
           <li class="portfolio-item item">
@@ -170,11 +170,11 @@
               />
               <h2 class="portfolio-item-title item-title">Online Courses</h2>
               <p class="portfolio-text text">Marketing</p>
-              <p class="portfolio-card-text text">
+              <!-- <p class="portfolio-card-text text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
-              </p>
+              </p> -->
             </a>
           </li>
           <li class="portfolio-item item">
@@ -189,11 +189,11 @@
                 Instagram Stories Concept
               </h2>
               <p class="portfolio-text text">Design</p>
-              <p class="portfolio-card-text text">
+              <!-- <p class="portfolio-card-text text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
-              </p>
+              </p> -->
             </a>
           </li>
           <li class="portfolio-item item">
@@ -206,11 +206,11 @@
               />
               <h2 class="portfolio-item-title item-title">Organic Food</h2>
               <p class="portfolio-text text">Web Site</p>
-              <p class="portfolio-card-text text">
+              <!-- <p class="portfolio-card-text text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
-              </p>
+              </p> -->
             </a>
           </li>
           <li class="portfolio-item item">
@@ -223,11 +223,11 @@
               />
               <h2 class="portfolio-item-title item-title">Fresh Coffee</h2>
               <p class="portfolio-text text">Web Site</p>
-              <p class="portfolio-card-text text">
+              <!-- <p class="portfolio-card-text text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
-              </p>
+              </p> -->
             </a>
           </li>
         </ul>
